--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@vercel/postgres": "^0.7.2",
+    "clsx": "^2.1.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
