--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/vision": "^4.3.2",
     "@heroicons/react": "^2.1.3",
     "@vercel/postgres": "^0.7.2",
     "clsx": "^2.1.0",
